# skoltech-path-planning

./: .gitignore
PS1/ivan_berendiaev_ps1/: a_star.py  actions.py  main.py
PS1/nikolay_naglov_ps1/: a_star.py  main.py  queue_test.py  rod_solve.py  utils.py
PS1/nikolay_naglov_ps1/actions/: action_interface.py  linear_movements.py  rotations.py
PS1/nikolay_naglov_ps1/agents/: agents.py
PS1/nikolay_naglov_ps1/collision_checkers/: collision_checker_interface.py  convolve2d.py
PS1/nikolay_naglov_ps1/planners/: a_star.py  path.py  planner_interface.py
PS1/nikolay_naglov_ps1/spaces/: space_interface.py  spaces.py
PS1/nikolay_naglov_ps1/state_spaces/: state_space_interface.py
PS1/nikolay_naglov_ps1/states/: states.py
PS1/nikolay_naglov_ps1/utils/: data_loader.py  image_utils.py  utils.py  visualizer.py
PS2/ivan_berendiaev_ps2/: angle_util.py  environment.py  main.py  rrt.py  video_util.py
PS2/nikolay_naglov_ps2/: angle_util.py  environment.py  main.py  rrt.py
PS3/ivan_berendiaev_ps3/: mdp.py  run.py  vi.py
PS3/nikolay_naglov_ps3/: mdp.py  run.py  utils.py  vi.py
sampling-based-planners/: CMakeLists.txt  package.xml
sampling_based_planners/: CMakeLists.txt  package.xml
sampling_based_planners/.cache/clangd/index/: planners_node.cpp.ED01A0FFD9A428D8.idx  planners_server.cpp.79192AAB0DF064B0.idx
sampling_based_planners/config/: planner_config.yaml
sampling_based_planners/include/: planners_server.hpp  robot_state.hpp
sampling_based_planners/include/environment/: map_2d.hpp
sampling_based_planners/include/planners/: planner_interface.hpp
sampling_based_planners/include/planners/ompl/: prm_star.hpp
sampling_based_planners/include/utils/: geometry.hpp  logger.hpp  ros_parameters.hpp
sampling_based_planners/launch/: planners.launch.py
sampling_based_planners/scripts/: visualize_planning.py
sampling_based_planners/src/: planners_node.cpp  planners_server.cpp
